[package]
name = "ckb-eagle-eye"
version = "0.1.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"

[dependencies]
uckb-jsonrpc-client = { git = "https://github.com/unofficial-ckb/uckb-jsonrpc-sdk.git", rev = "a8316e2" }
clap = { version = "~2.33", features = ["yaml"] }
failure = "~0.1"
log = "~0.4"
pretty_env_logger = "~0.3"
property = "~0.2"
